# awesome-masa

./: .gitignore  DISTRIBUTE_TAO_README.md  LICENSE  README.md  env.example  environment.yml  last_known_state.json  last_known_state_detailed.json  requirements.txt  scraped_listings.json  tweet_data.json
TMA/: README.md  cli.py  pyproject.toml  verify.ipynb
TMA/tma_asset_generator/: __init__.py  batch.py  client.py  downloader.py  images.py  prompts.py  utils.py
TMA/tma_asset_generator/batch_20241025_090348/: image_metadata_20241025_090348.parquet
agents/: app.py
agents/agent/: TWITTER.md  agent_config.py  rag_agent.py
agents/twitter-kol-agent/: README.md  rag_agent.py
agents/twitter_kol_agent/: agent_config.py  rag_agent.py  twitter_kol_agent.py
agents/twitter_memecoin_agent/: agent_config.py  rag_agent.py  twitter_memecoin_agent.py
data/: __GOAT_.json  __memecoin_.json  _from_SatoshiFlipper_.json  _from_blknoiz06_.json  _from_bondexapp_.json  all_tweets_2024-07-24_16-14-28.json  elon_tweets.csv  elon_tweets_control.csv  funded_coldkeys.txt  memecoin_tweets.csv
data/discord_data/: 1217114388373311640_2024-08-02_12-54-25.json  906256283068403732_2024-08-05_09-46-57.json
data/twitter/: tweet_response_2024-07-23_1721781439.json
datasets/: README.md
examples/: elon_tweets.py  memecoin_tweets.py
hugging_face/: README.md  hf_refactor.py  hf_upload_record.json  hugging_face.py  masa_foundation_datasets.json  masa_foundation_datasets_restructured.json  restructure_json.py
scrapers/: elon_tweets.json  elon_tweets.py
src/: bulk_transfer.py
(+2975 files in other folders)
